fixing line spacing

--- a/main.css
+++ b/main.css
@@ -341,6 +341,10 @@ width: 50%;
   color: #2f67cd;
 }
 
+.portfolio-img {
+  flex: 1.5;
+}
+
 .timeline ul{
   border-left: 4px solid #ffe838;
   border-radius: .8rem;
@@ -468,6 +472,10 @@ input[type="submit"]:hover{
 .copyright p{
   font-size: 1.4rem;
 }
+
+/* .services{
+  padding-bottom: 28rem;
+} */
 
 
 @keyframes pulse {
